--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,1 +1,27 @@
-<p>header works!</p>
+<mat-toolbar color="primary">
+
+  <button
+    mat-icon-button
+    class="burguer-btn">
+    <mat-icon>menu</mat-icon>
+  </button>
+
+  <span>My App</span>
+
+  <button
+    mat-icon-button
+    class="example-icon favorite-icon"
+    aria-label="Example icon-button with heart icon">
+    <mat-icon class="material-symbols-outlined">
+      account_circle
+      </mat-icon>
+  </button>
+  <button
+    mat-icon-button
+    class="example-icon"
+    aria-label="Example icon-button with share icon">
+    <mat-icon class="material-symbols-outlined">
+      shopping_cart
+      </mat-icon>
+  </button>
+</mat-toolbar>
