--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,27 +1,24 @@
-<mat-toolbar color="primary">
-
-  <button
+<mat-toolbar color="primary" >
+  <span>e-commerce</span>
+  
+  <div class="d-flex align-items-center">
+    <button
     mat-icon-button
-    class="burguer-btn">
-    <mat-icon>menu</mat-icon>
-  </button>
-
-  <span>My App</span>
-
-  <button
-    mat-icon-button
-    class="example-icon favorite-icon"
+    class="nav-bar favorite-icon"
     aria-label="Example icon-button with heart icon">
     <mat-icon class="material-symbols-outlined">
       account_circle
       </mat-icon>
-  </button>
-  <button
+    </button>
+    <button
     mat-icon-button
-    class="example-icon"
+    class="nav-bar"
     aria-label="Example icon-button with share icon">
     <mat-icon class="material-symbols-outlined">
       shopping_cart
-      </mat-icon>
+    </mat-icon>
   </button>
+</div>
+
 </mat-toolbar>
+
