--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,24 +1,17 @@
-<mat-toolbar color="primary" >
+<mat-toolbar color="primary">
   <span>e-commerce</span>
-  
-  <div class="d-flex align-items-center">
-    <button
-    mat-icon-button
-    class="nav-bar favorite-icon"
-    aria-label="Example icon-button with heart icon">
-    <mat-icon class="material-symbols-outlined">
-      account_circle
+
+  <div class="d-flex align-items-center icons-container">
+    <button mat-icon-button class="nav-bar favorite-icon" aria-label="icon-button with heart icon">
+      <mat-icon class="material-symbols-outlined">
+        account_circle
       </mat-icon>
     </button>
-    <button
-    mat-icon-button
-    class="nav-bar"
-    aria-label="Example icon-button with share icon">
-    <mat-icon class="material-symbols-outlined">
-      shopping_cart
-    </mat-icon>
-  </button>
-</div>
+    <button mat-icon-button class="nav-bar" aria-label="icon-button with share icon">
+      <mat-icon class="material-symbols-outlined">
+        shopping_cart
+      </mat-icon>
+    </button>
+  </div>
 
 </mat-toolbar>
-
