--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,3 @@
-<p>home works!</p>
+<section class="products-container">
+  <app-card-product *ngFor="let product of products" [product]="product"></app-card-product>
+</section>
