agrego componentes producto e inicio de funcionalidad de swiper

--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -1,1 +1,57 @@
-<p>product works!</p>
+<!-- <section class="product-id">
+    <ul class="page-position">
+      <p>Home</p>
+      <li>
+        <p>{product?.title}</p>
+      </li>
+    </ul>
+    <Swiper
+      loop={true}
+      spaceBetween={10}
+      navigation={true}
+      modules={[Navigation, Thumbs]}
+      grabCursor={true}
+      className="product-swiper__container"
+    >
+      {product?.productImgs.map((img, index) => (
+        <SwiperSlide key={index}>
+          <img src={img} alt={product.title} />
+        </SwiperSlide>
+      ))}
+    </Swiper>
+
+    <article class="product-id-info">
+      <h3 class="">{product?.title}</h3>
+      <div class="info-tobuy">
+        <div class="id-info__price">
+          <span>Price</span>
+          <p>$ {product?.price}</p>
+        </div>
+        <div class="id-info__quantity">
+          <span>Quantity</span>
+          <div class="quantity__buttons">
+            <button onClick={handleMinor}>-</button>
+            <span>{quantity}</span>
+            <button onClick={handlePlus}>+</button>
+          </div>
+        </div>
+      </div>
+      <button onClick={handleAddCart} class="btn-id-cart">
+        Add to cart
+        <i class="fa-solid fa-cart-shopping"></i>
+      </button>
+      <p class="product-id__description">{product?.description}</p>
+    </article>
+    <article class="discover">
+      <h4>Discover similar items</h4> -->
+      <!-- <div class="cards-discover__container">
+        {categoryMatch?.map((product) => (
+          <Discover key={product.id} product={product} />
+        ))}
+      </div> -->
+    <!-- </article>
+  </section> -->
+
+  <!-- <swiper-container>
+
+  </swiper-container>-->
