--- a/src/app/components/card-product/card-product.component.scss
+++ b/src/app/components/card-product/card-product.component.scss
@@ -7,6 +7,10 @@
     height: 250px;
     padding: 20px;
     cursor: pointer;
+    a {
+      width: 100%;
+      height: 100%;
+    }
     img {
       width: 100%;
       height: 100%;
