--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -3,6 +3,9 @@ mat-toolbar {
   justify-content: space-between;
   padding: 0 10%;
   box-shadow: 1px 0px 10px #00000079;
+  position: fixed;
+  top: 0;
+  z-index: 2000;
   button {
     border: none;
     background-color: #ffffff;
@@ -12,6 +15,9 @@ mat-toolbar {
     justify-content: center;
   }
 }
+.logo {
+  cursor: pointer;
+}
 .mat-toolbar.mat-primary {
   background: #ffffff;
   color: #f85555;
@@ -20,6 +26,32 @@ mat-toolbar {
   width: 100px;
   justify-content: space-around;
 }
+.cart-products {
+  position: fixed;
+  right: -100%;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.743);
+  top: 56px;
+  display: flex;
+  justify-content: end;
+  transition: right 0.5s ease-in-out;
+  z-index: 100;
+  .products-container-cart {
+    width: 40%;
+    min-width: 300px;
+    max-width: 500px;
+    height: 100%;
+    background-color: #ffffff;
+    right: 0;
+  }
+}
+
+.cart-display {
+  right: 0;
+  transition: right 0.5s ease-in-out;
+}
+
 @media screen and (min-width: 800px) {
   .icons-container {
     width: 200px;
