--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -51,6 +51,53 @@ mat-toolbar {
   right: 0;
   transition: right 0.5s ease-in-out;
 }
+.product-cart__container {
+  width: 100%;
+  height: 130px;
+  margin-top: 0px;
+  border-bottom: 1px solid var(--gray);
+  display: grid;
+  padding: 10px;
+  padding-right: 25px;
+  font-size: 13px;
+}
+.product-cart__description {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+.product-cart__titles span {
+  color: var(--gray);
+}
+.product-cart__description i {
+  color: var(--principal-color);
+  cursor: pointer;
+}
+
+.product-cart__description i:hover {
+  scale: 1.05;
+  color: #f73737;
+}
+.product-cart__quantity {
+  width: 30px;
+  padding: 4px;
+  border: 1px solid var(--gray);
+  text-align: center;
+  margin-bottom: 10px;
+}
+.product-cart__price {
+  justify-self: end;
+}
+.product-cart__price {
+  font-weight: bold;
+  font-size: 15px;
+}
+.product-cart__price span {
+  margin-right: 30px;
+  font-size: 14px;
+  font-weight: 400;
+  color: var(--gray);
+}
 
 @media screen and (min-width: 800px) {
   .icons-container {
