--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -53,9 +53,8 @@ mat-toolbar {
 }
 .product-cart__container {
   width: 100%;
-  height: 130px;
   margin-top: 0px;
-  border-bottom: 1px solid var(--gray);
+  border-bottom: 1px solid#888888;
   display: grid;
   padding: 10px;
   padding-right: 25px;
@@ -67,10 +66,10 @@ mat-toolbar {
   margin-bottom: 10px;
 }
 .product-cart__titles span {
-  color: var(--gray);
+  color: #888888;
 }
 .product-cart__description i {
-  color: var(--principal-color);
+  color: #f73737;
   cursor: pointer;
 }
 
@@ -81,7 +80,7 @@ mat-toolbar {
 .product-cart__quantity {
   width: 30px;
   padding: 4px;
-  border: 1px solid var(--gray);
+  border: 1px solid#888888;
   text-align: center;
   margin-bottom: 10px;
 }
@@ -96,7 +95,7 @@ mat-toolbar {
   margin-right: 30px;
   font-size: 14px;
   font-weight: 400;
-  color: var(--gray);
+  color: #888888;
 }
 
 @media screen and (min-width: 800px) {
@@ -104,4 +103,81 @@ mat-toolbar {
     width: 200px;
     justify-content: space-around;
   }
+}
+.cart__container {
+  right: -310px;
+  transition: right 1000ms ease;
+  position: fixed;
+  top: 60px;
+  width: 300px;
+  height: 78vh;
+  z-index: 100;
+  background-color: #ffffff;
+  border-top: 1px solid #888888;
+  border-left: 1px solid #888888;
+  border-bottom: 1px solid #888888;
+  padding: 10px;
+  padding-bottom: 30px;
+  display: grid;
+  grid-template-rows: 0.1fr 1.7fr 0.2fr;
+  border-bottom-left-radius: 10px;
+}
+.cart__container--checked {
+  right: 0;
+  transition: right 1000ms ease;
+  position: fixed;
+  top: 60px;
+  width: 300px;
+  height: 78vh;
+  z-index: 100;
+  background-color: #ffffff;
+  border-top: 1px solid #888888;
+  border-left: 1px solid #888888;
+  border-bottom: 1px solid #888888;
+  padding: 10px;
+  padding-bottom: 30px;
+  display: grid;
+  grid-template-rows: 0.1fr 1.7fr 0.2fr;
+  border-bottom-left-radius: 10px;
+}
+.cart__container h3 {
+  height: 30px;
+  margin-left: 10px;
+}
+.cart-products__container {
+  overflow-y: scroll;
+  margin-bottom: 10px;
+}
+.cart__total {
+  align-self: flex-end;
+  justify-self: flex-end;
+  width: 100%;
+}
+.cart__total div {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+  padding: 0 10px;
+}
+.cart__total button {
+  height: 30px;
+  width: 100%;
+  border: none;
+  border-radius: 5px;
+  background-color: #f65454;
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: bold;
+  letter-spacing: 1px;
+  cursor: pointer;
+}
+.cart__total button:hover {
+  background-color: #f73737;
+}
+.total-price {
+  font-size: 20px;
+  font-weight: bold;
+}
+.products-container {
+  padding: 10px;
 }
